# circuitpython_toml

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.rst  README.rst.license  __test__.toml  changelog.rst  changelog.rst.license  optional_requirements.txt  pyproject.toml  requirements.txt  run-toml-test  tests.py  toml-test-decoder
.github/workflows/: release_gh.yml
examples/: toml_simpletest.py
toml/: __init__.py  _dotty.py  _toml.py
